frontend/style_now.css
/* ... */
.its_my_app_work #tab7 .form-group label{
    display: flex;
    margin-top: 15%;
    justify-content: center;

}


.its_my_app_work #tab7 .form-group p{
    margin-bottom: 15%;
}


.its_my_app_work #tab7 .form-group:last-child{
  border-right: none;
}

.its_my_app_work #tab7 .main{
    flex: 2;
    min-width: 300px;
    background: #fff;
    border: 1px solid #E0E0E0;
    margin-top: 3%;
    margin-bottom: 2%;
    padding: 2%;
}




@media (max-width: 768px) {
	
		.its_my_app_work #tab0 .tab-nav-buttons.container {
    grid-template-columns: repeat(2, 1fr) !important;
}

.its_my_app_work #tab0 .tab-nav-buttons button {
    row-gap: 10px !important;
	  font-size: 15px !important;
}

.its_my_app_work #tab0.tab-content.active {
    width: 100% !important;
}

.its_my_app_work #tab2 .card-option {
    line-height: 15px;
}


.its_my_app_work #tab6 #weitere-optionen .card-option ul li {
    font-size: 10px !important;
}

.its_my_app_work #tab6 .card-option strong {
    font-size: 10px !important;
}

#tab6 a.inquiry-btn,
#tab7 a.inquiry-btn {
    font-size: 14px;
}

.rollladen-sidebar-line {
    display: block;
}

.its_my_app_work #tab4 .container {
    display: flex;
    flex-wrap: wrap;
    align-content: center;
    align-items: center;
}

div#globalBottomCheckpoint {
    position: fixed;
    bottom: 0;
    background: #fff !important;
    width: 100%;
    z-index: 999;
}

.its_my_app_work #tab5 #farben-tab-innen {
    grid-template-columns: repeat(auto-fit, minmax(32%, 1fr)) !important;
}

.its_my_app_work .discount-label{
    top: 5px;
    left: 5px;
    font-size: 10px !important;
}

.its_my_app_work .card-option {
    flex-direction: column !important;
}


.its_my_app_work .quantity_app{
    font-size: 15px;
}

.its_my_app_work #tab4 .card-option{
    text-align: center !important;
}

.its_my_app_work .tab-header-wrapper{
    overflow-x: auto;
    -webkit-overflow-scrolling: touch;
  }

.its_my_app_work .tab-header-wrapper::-webkit-scrollbar{
    display: none;
  }
.its_my_app_work .tab-header-wrapper{
    scrollbar-width: none;
    -ms-overflow-style: none;
  }

.its_my_app_work .tab-link{
    font-size: 15px;
}

.its_my_app_work .tab-content h2{
    font-size: 15px;
}



.its_my_app_work .card-option{
    flex-direction: column;
}

.its_my_app_work .card-option span{
    font-size: 10px !important;
    margin-top: 10px;
}

.its_my_app_work .card-option img{
    margin-left: 1rem !important;
    margin-right: 0 !important;
}


.its_my_app_work .card-option strong{
    font-size: 13px !important;
}

.its_my_app_work #tab1 li{
    font-size: 10px;
}



.its_my_app_work .tab-content .container{
    flex-direction: column-reverse; 
        flex-wrap: nowrap;
    justify-content: space-between;
}
.its_my_app_work #tab1 ul{
    padding-left: 0;
    margin: 0 0 0;
}

.its_my_app_work #tab1 li img{
          margin-left: 0px !important;
        margin-right: 3px !important;
                width: auto !important;
}

.its_my_app_work .checkmark-box img{
    width: auto !important;
}

.its_my_app_work .card-option img{
    margin-left: 1rem !important;
    margin-right: 0 !important;
    width: 90px;
}

.its_my_app_work .preview-box h4{
    font-size: 15px;
}
.its_my_app_work .preview-box p{
    font-size: 13px;
}

.its_my_app_work .mypreviousdesign h4{
    font-size: 15px;
}
.its_my_app_work .mypreviousdesign p{
    font-size: 13px;
}



.its_my_app_work .btnmain{
    font-size: 12px;
    line-height: 88%;
    padding: 0.75rem 2rem;
    padding: 8px 12px;
    width: 100px;
    height: auto;
}


.its_my_app_work .tab{
    font-size: 13px;
}

.its_my_app_work .section-title{
    margin: 25px 0 25px;
    font-size: 20px;
}


.its_my_app_work .form-group label{
    font-size: 12px;
}

.its_my_app_work .form-group input{
    padding: 6px;
    font-size: 12px;
}

.its_my_app_work .form-group{
    margin-bottom: 6px;
}

.its_my_app_work #tab5 .flex-row{
    margin-bottom: 40px;
}

.its_my_app_work #tab5 .tab{
    text-align: left;
}

.its_my_app_work #tab5 .tabs{
    flex-direction: column;
}

.its_my_app_work button.btnmain-cart.cart{
    font-size: 11px;
}

.its_my_app_work span.quantity_cover{
    padding: 5px 5px;
}

.its_my_app_work span.quantity_cover button{
    font-size: 15px;
    padding: 0px 18px;
}


.its_my_app_work .preview-box strong{
    font-size: 15px;
}

.its_my_app_work .sidebar.preview-box strong span{
    font-size: 15px;
}

.its_my_app_work .sidebar.preview-box span{
    font-size: 13px;
}



.its_my_app_work .mypreviousdesign strong{
    font-size: 15px;
}

.its_my_app_work .sidebar.mypreviousdesign strong span{
    font-size: 15px;
}

.its_my_app_work .sidebar.mypreviousdesign span{
    font-size: 13px;
}


.its_my_app_work .tab-content{
    padding: 0 10px 0 10px !important;
}

.its_my_app_work .checkmark-box{
    right: 20px;
    top: 0px;
    width: 23px;
}

.its_my_app_work #tab6 .tabs{
    flex-direction: column;
    width: 100%;
}

.its_my_app_work #tab6 .tab{
    text-align: left;
}

.its_my_app_work #tab6 .main{
    width: 100%;
}

.its_my_app_work #tab6 .form-group label{
    font-size: 13px;
}

.its_my_app_work .formobilegroup{
    flex-direction: column;
}

.its_my_app_work #tab6 .form-group input, .its_my_app_work #tab6 .form-group select{
    height: 0px;
    font-size: 13px;
}

.its_my_app_work #tab6 .mypreviousdesign p{
    font-size: 14px !important;
}

.its_my_app_work #tab7 .form-group{
    border-right: none;
    margin-bottom: 0px;
    
}

.its_my_app_work #tab7 .form-group label{
    margin-top: 0;
}

.its_my_app_work #tab7 .form-group p{
    margin-bottom: 2%;
       font-size: 12px;
}

.its_my_app_work #tab7 .form-group label{
    font-size: 15px;
}

.its_my_app_work #tab7 .flex-row{
    border-bottom: 0;
    margin-bottom: 25px;
}

}
/* ... */

